# personal-mobility-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.frontend  Makefile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 886cddfc791f_create_ser_zones.py  a1b2c3d4e5f6_create_users.py  a7b8c9d0e1f2_add_cascade_delete_vehicle_fks.py  b2c3d4e5f6a1_add_user_id_to_vehicles.py  c1f3a8e72b04_add_zone_type_spot_count_drop_zone_code_label.py  d1e2f3a4b5c6_create_vehicles.py  e2f3a4b5c6d1_create_vehicle_configs.py  f3a4b5c6d1e2_create_vehicle_locations.py
db/migrations/: 001_create_ser_zones.sql
frontend/: eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/e2e/: map.spec.ts  my-vehicles.spec.ts
frontend/e2e/fixtures/: auth.ts
frontend/e2e/pages/: MyVehiclesPage.ts
frontend/src/: App.tsx  i18n.ts
frontend/src/api/: auth.ts  config.ts  vehicles.ts  zones.ts
frontend/src/components/: AddVehicleModal.tsx  EditVehicleModal.tsx  Nav.tsx  ProtectedRoute.tsx  VehicleCard.tsx  VehicleMap.tsx  ZoneMap.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: LandingPage.tsx  MapPage.tsx  MyVehiclesPage.tsx
frontend/src/types/: vehicle.ts  zone.ts
openspec/changes/add-github-actions-cicd/: design.md  tasks.md
openspec/changes/madrid-ser-zone-scheduler/: design.md  proposal.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/city-parking-data-provider/: spec.md
openspec/specs/frontend-ci/: spec.md
openspec/specs/google-auth/: spec.md
openspec/specs/landing-page/: spec.md
openspec/specs/schema-migrations/: spec.md
openspec/specs/ui-i18n/: spec.md
src/mobility_manager/: config.py
tests/application/: test_find_nearest_ser_zone.py
tests/domain/: test_geolocation.py
tests/infrastructure/: test_crypto.py  test_csv_parser.py  test_reprojection.py  test_ser_zone_repo_integration.py  test_vehicle_config_repo_integration.py  test_vehicle_location_repo_integration.py  test_vehicle_repo_integration.py
tests/presentation/: test_auth_api.py  test_config_api.py  test_csrf.py  test_deps.py  test_parking_api.py  test_vehicles_api.py  test_zones_api.py
(+143 files in other folders)
